hphp/hack/test/typecheck/as_expression/tconst7.php.like_types.exp
File "tconst7.php", line 15, characters 14-30:
Invalid argument (Typing[4110])
File "tconst7.php", line 6, characters 21-30:
Expected ~this::TFoo because it is an unenforceable type
File "tconst7.php", line 15, characters 14-30:
But got null
